update meta tag

--- a/server/index.pug
+++ b/server/index.pug
@@ -4,10 +4,10 @@ html(lang='zh-tw')
 		meta(charset='UTF-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		meta(http-equiv='X-UA-Compatible' content='ie=edge')
-		meta(name='description' content='線上的 epub/txt 繁簡轉換工具')
-		meta(name='keywords',content='epub,txt,繁簡,繁簡轉換,工具')
+		meta(name='description' content='線上的 epub/txt 電子書繁簡轉換工具。上傳你的 epub/txt、選擇轉換模式，然後等待並下載就可取得轉換過的檔案。')
+		meta(name='keywords',content='epub,txt,ebook,電子書,繁簡,繁簡轉換,工具,繁體,簡體')
 		link(href='/static/style.css' rel='stylesheet')
-		title Epub/Txt 繁簡轉換
+		title epub/txt 電子書繁簡轉換
 	body
 		form.block.file-form(action='/opencc-convert-epub' method='POST' enctype='multipart/form-data')
 			div
