--- a/server/info.pug
+++ b/server/info.pug
@@ -5,6 +5,7 @@ html(lang='zh-tw')
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		title #{file.originalName} 轉換資訊
 		link(href='/static/style.css' rel='stylesheet')
+		include ads.pug
 	body
 		if file.error
 			div(class='block')
