--- a/server/index.pug
+++ b/server/index.pug
@@ -16,17 +16,42 @@ html(lang='zh-tw')
 				input#opencc-epub(name='file' type='file' accept='application/epub+zip')
 			div
 				label(for='select-opencc-epub') 轉換模式:&nbsp;
-				select#select-opencc-epub(name='type')
-					option(value='hongKongToSimplified') 香港繁體轉簡體
-					option(value='simplifiedToHongKong') 簡體轉香港繁體
-					option(value='simplifiedToTraditional') 簡體轉繁體
-					option(value='simplifiedToTaiwan' selected='') 簡體轉台灣繁體
-					option(value='simplifiedToTaiwanWithPhrases') 簡體轉台灣繁體(含單字)
-					option(value='traditionalToHongKong') 繁體轉香港繁體
-					option(value='traditionalToSimplified') 繁體轉簡體
-					option(value='traditionalToTaiwan') 繁體轉台灣繁體
-					option(value='taiwanToSimplified') 台灣繁體轉簡體
-					option(value='taiwanToSimplifiedWithPhrases') 台灣繁體轉簡體(含單字)
+				select#select-opencc-epub(name='type-from')
+					option(value='t') OpenCC 繁體
+					option(value='tw') 台灣繁體
+					option(value='twp') 台灣繁體與用詞
+					option(value='hk') 香港繁體
+					option(value='cn' selected) 大陸簡體
+					option(value='jp') 日本新字體
+				select#select-opencc-epub(name='type-to')
+					option(value='t') OpenCC 繁體
+					option(value='tw') 台灣繁體
+					option(value='twp' selected) 台灣繁體與用詞
+					option(value='hk') 香港繁體
+					option(value='cn') 大陸簡體
+					option(value='jp') 日本新字體
+			input(type='submit' value='轉換')
+			input(name='captcha' type='text' hidden)
+		form.block.file-form(action='/opencc-convert-txt' method='POST' enctype='multipart/form-data')
+			div
+				label(for='opencc-txt') Txt 檔案(OpenCC):
+				input#opencc-txt(name='file' type='file' accept='text/plain')
+			div
+				label(for='select-opencc-txt') 轉換模式:&nbsp;
+				select#select-opencc-epub(name='type-from')
+					option(value='t') OpenCC 繁體
+					option(value='tw') 台灣繁體
+					option(value='twp') 台灣繁體與用詞
+					option(value='hk') 香港繁體
+					option(value='cn' selected) 大陸簡體
+					option(value='jp') 日本新字體
+				select#select-opencc-epub(name='type-to')
+					option(value='t') OpenCC 繁體
+					option(value='tw') 台灣繁體
+					option(value='twp' selected) 台灣繁體與用詞
+					option(value='hk') 香港繁體
+					option(value='cn') 大陸簡體
+					option(value='jp') 日本新字體
 			input(type='submit' value='轉換')
 			input(name='captcha' type='text' hidden)
 		form.block.file-form(action='/zhc-convert-epub' method='POST' enctype='multipart/form-data')
@@ -43,25 +68,6 @@ html(lang='zh-tw')
 					option(value='Taiwan' selected='') 台灣化
 					option(value='WikiSimplified') 維基簡體化
 					option(value='WikiTraditional') 維基繁體化
-			input(type='submit' value='轉換')
-			input(name='captcha' type='text' hidden)
-		form.block.file-form(action='/opencc-convert-txt' method='POST' enctype='multipart/form-data')
-			div
-				label(for='opencc-txt') Txt 檔案(OpenCC):
-				input#opencc-txt(name='file' type='file' accept='text/plain')
-			div
-				label(for='select-opencc-txt') 轉換模式:&nbsp;
-				select#select-opencc-txt(name='type')
-					option(value='hongKongToSimplified') 香港繁體轉簡體
-					option(value='simplifiedToHongKong') 簡體轉香港繁體
-					option(value='simplifiedToTraditional') 簡體轉繁體
-					option(value='simplifiedToTaiwan' selected='') 簡體轉台灣繁體
-					option(value='simplifiedToTaiwanWithPhrases') 簡體轉台灣繁體(含單字)
-					option(value='traditionalToHongKong') 繁體轉香港繁體
-					option(value='traditionalToSimplified') 繁體轉簡體
-					option(value='traditionalToTaiwan') 繁體轉台灣繁體
-					option(value='taiwanToSimplified') 台灣繁體轉簡體
-					option(value='taiwanToSimplifiedWithPhrases') 台灣繁體轉簡體(含單字)
 			input(type='submit' value='轉換')
 			input(name='captcha' type='text' hidden)
 		form.block.file-form(action='/zhc-convert-txt' method='POST' enctype='multipart/form-data')
