support dark mode & hide ads container if blocked

--- a/server/index.pug
+++ b/server/index.pug
@@ -89,7 +89,7 @@ html(lang='zh-tw')
 					option(value='WikiTraditional') 維基繁體化
 			input(type='submit' value='轉換')
 			input(name='captcha' type='text' hidden)
-		.block
+		.block.ad-container
 			+adsblock
 		if hcaptcha
 			.block.flex.center#hcaptcha-container
