--- a/server/ads.pug
+++ b/server/ads.pug
@@ -1,5 +1,5 @@
 mixin adsblock
-	script(async src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+	script(async src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js' onerror='this.parentNode.style.display="none"')
 	ins.adsbygoogle(style='display:block' data-ad-client='ca-pub-9668242940924302' data-ad-slot='5777875091' data-ad-format='auto' data-full-width-responsive='true')
 	script.
 		(adsbygoogle = window.adsbygoogle || []).push({});
