--- a/server/static/style.css
+++ b/server/static/style.css
@@ -21,3 +21,18 @@ body {
 		width: 100%;
 	}
 }
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #191d21;
+		color: #fff;
+	}
+	a {
+		color: #adadad;
+	}
+	a:hover {
+		color: #878787;
+	}
+}
+.adsbygoogle + div {
+	display: none;
+}
