--- a/server/index.pug
+++ b/server/index.pug
@@ -96,9 +96,13 @@ html(lang='zh-tw')
 		.block
 			div
 				| 請注意，所有的檔案編碼都會轉換為 UTF-8，無論原本的檔案是 BIG-5,
-				| GBK 或是其他的都沒差
+				| GBK 或是其他的都會被自動轉換的
+		.block
 			div
-				a(href='https://github.com/maple3142/ebook-converter') GitHub
+				| GitHub:
+				a(href='https://github.com/maple3142/ebook-converter') maple3142/ebook-converter
+				br
+				| 網站有問題的話請到此回報
 		.block
 			div
 				| 另外，關於
