--- a/server/ads.pug
+++ b/server/ads.pug
@@ -1,3 +1,10 @@
+mixin clarityblock
+	script(type='text/javascript').
+		(function(c,l,a,r,i,t,y){
+		c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+		t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+		y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+		})(window, document, "clarity", "script", "ftnl8r6ztb");
 mixin adsblock
 	script(async src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js' onerror='this.parentNode.style.display="none"')
 	ins.adsbygoogle(style='display:block' data-ad-client='ca-pub-9668242940924302' data-ad-slot='5777875091' data-ad-format='auto' data-full-width-responsive='true')
