--- a/server/info.pug
+++ b/server/info.pug
@@ -9,6 +9,7 @@ html(lang='zh-tw')
 			title #{file.originalName} 轉換資訊
 		link(href='/static/style.css' rel='stylesheet')
 		include ads.pug
+		+clarityblock
 	body
 		if !file
 			.block
