--- a/server/index.pug
+++ b/server/index.pug
@@ -9,6 +9,7 @@ html(lang='zh-tw')
 		link(href='/static/style.css' rel='stylesheet')
 		title epub/txt 電子書繁簡轉換
 		include ads.pug
+		+cloudflare_web_analytics
 		+clarityblock
 	body
 		h1 epub/txt 電子書繁簡轉換
